# In-hand-Manipulator

./: .gitignore  README.md
DynamixelSDK/: .gitignore
DynamixelSDK/dynamixel_sdk_inf/: CMakeLists.txt
DynamixelSDK/install/: local_setup.sh  setup.sh
DynamixelSDK/install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.sh  package.sh
DynamixelSDK/install/dynamixel_sdk_inf/share/dynamixel_sdk_inf/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
DynamixelSDK/install/motor_setup/lib/motor_setup/: set_pose
DynamixelSDK/install/motor_setup/share/motor_setup/: local_setup.sh  (+5 more)
DynamixelSDK/log/: latest_build
DynamixelSDK/motor_setup/: CMakeLists.txt  package.xml
DynamixelSDK/motor_setup/config/: params.yaml
DynamixelSDK/motor_setup/launch/: init_component.launch.py
DynamixelSDK/motor_setup/src/: init_component.cpp  position_control.cpp  position_pub.cpp
DynamixelSDK/src/dynamixel_sdk_inf/: CMakeLists.txt
DynamixelSDK/src/dynamixel_sdk_inf/srv/: GetTorquectrl.srv
DynamixelSDK/src/motor_setup/: CMakeLists.txt
DynamixelSDK/src/motor_setup/launch/: init_component.launch.py
DynamixelSDK/src/motor_setup/src/: pos_torque_control.cpp  position_control.cpp  position_pub.cpp
Solidworks/: Assem1.SLDASM  Link1.SLDPRT  Link3.SLDPRT  base.SLDPRT  link2.SLDPRT  motor.SLDPRT
firmware/1_N20Control/: sdkconfig  sdkconfig.old
firmware/1_N20Control/frontend/: index.html
firmware/1_N20Control/main/: CMakeLists.txt  angleControl.c  line_following.c  n20control.c  tuning_http_server.c
firmware/1_N20Control/main/include/: tuning_http_server.h  wifi_handler.h
firmware/2_switch_controlled_motor_normal/main/: switch_control_motor_normal.c
(+94 files in other folders)
